# linalg

./: .gitignore  CMakeLists.txt  tests.c
